--- a/estilos/style.css
+++ b/estilos/style.css
@@ -37,11 +37,13 @@ section#login {
     height: 500px;
     border-radius: 20px;
     box-shadow: 0px 5px 10px black;
+    transition: width .3s, heigth .3s;
+    transition-timing-function: ease;
 }
 
 section#login > div#imagem {
     display: block;
-    background: #5f2c82 url(../imagens/bola.jpg);
+    background: #411536 url(../imagens/bola.jpg);
     background-size: cover;
     height: 200px;
 }
