--- a/estilos/style.css
+++ b/estilos/style.css
@@ -1,5 +1,21 @@
 @charset "UTF-8";
 
+/* scrollbar */
+*::-webkit-scrollbar {
+    width: 15px;
+}
+
+*::-webkit-scrollbar-track {
+    background: #f1e9e9;
+    border-radius: 0px
+}
+
+*::-webkit-scrollbar-thumb {
+    background-color: #533a4d;
+    border-radius: 5px;
+    border: 2px solid #ffffff;
+}
+
 /*
     Paleta de cores
     Verde: #49a09d
@@ -34,7 +50,7 @@ section#login {
     overflow: hidden;
     background-color: white;
     width: 250px;
-    height: 500px;
+    height: 510px;
     border-radius: 20px;
     box-shadow: 0px 5px 10px black;
     transition: width .2s, heigth .2s;
@@ -60,4 +76,56 @@ div#formulario > h1 {
 
 div#formulario > p {
     font-size: 0.9em;
+}
+
+form > div.campo {
+    background-color: #411536;
+    display: block;
+    width: 100%;
+    height: 40px;
+    border-radius: 5px;
+    margin: 5px 0px;
+}
+
+div.campo > label {
+    display: none;
+}
+
+form > input[type=submit] {
+    display: block;
+    font-size: 1em;
+    width: 100%;
+    height: 40px;
+    background-color: #49a09d;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+form > input[type=submit]:hover {
+    background-color: #2d6462;
+}
+
+form > a.botao {
+    display: block;
+    text-align: center;
+    font-size: 1em;
+    width: 100%;
+    height: 40px;
+    padding-top: 7px;
+    margin-top: 5px;
+    background-color: #e4eeed;
+    color: #2d6462;
+    border: 1px solid #49a09d;
+    border-radius: 5px;
+    text-decoration: none;
+}
+
+form > a.botao:hover {
+    background-color: #92f7f3;
+}
+
+form > a.botao > i {
+    font-size: 0.8em;
 }
